# common_rag

./: .dockerignore  .env.ci  .env.example  .gitignore  README.md  docker-compose-test.yaml  docker-compose.yml
core_rag_graph/: .dockerignore  .env.example  Dockerfile.compose  README.md  graph_logic.py  graph_server.py  logging_config.py  pyproject.toml  requirements.txt  schemas.py  start_server.sh  state.py
core_rag_graph/.cursor/rules/: core-rag-graph-project.mdc  python-graph-rag.mdc
core_rag_graph/config/: __init__.py  base_config.yaml  config_loader.py  llm_config.yaml  prompt_templates.py
core_rag_graph/docs/: collection-neo4j-implementation-plan.md  openapi.json  runbook-migration-cutover.md
core_rag_graph/graph/: __init__.py
core_rag_graph/graph/config/: __init__.py  prompt_templates.py
core_rag_graph/graph/utils/: __init__.py  call_llm_api.py  collection_id_middleware.py  collection_id_scope.py  community_reports.py  graph_processor.py  graph_repository.py  kt_gen.py  leiden.py  logger.py  resolution.py
core_rag_graph/routers/: graph_api.py  health.py
core_rag_graph/scripts/: check_backend_parity.py  ensure_neo4j_schema.py  migrate_json_to_neo4j.py  openapi_spec.py
core_rag_graph/utils/: call_llm_api.py  collection_id_middleware.py  collection_id_scope.py  community_reports.py  graph_processor.py  graph_repository.py  kt_gen.py  leiden.py  logger.py  resolution.py  timing.py
doc_processing/: .dockerignore  .env.example  .gitignore  Dockerfile.compose  README.md  openapi.json  pyproject.toml
doc_processing/.cursor/rules/: document-processing-chunking.mdc  fastapi.mdc  python-best-practices.mdc
doc_processing/docs/: DOCUMENT_CHUNKING.md  PR_PLAN_SERVICE_SPLIT.md  REFERENCES.md  SERVICE_SPLIT_PLAN.md
doc_processing/scripts/: test_ffp_pipeline.py  test_pdf_to_markdown_docling.py
doc_processing/src/config/: chunking.yaml  deepseek_ocr_ollama.yaml  glm_ocr_ollama.yaml  llm_config.yaml
doc_processing/src/doc_processing/: __init__.py  config.py  debug_trace.py  main.py
doc_processing/tests/: __init__.py  conftest.py  test_debug_trace.py  test_docling_vlm_config.py  test_documents.py  test_health.py  test_llm.py  test_llm_runtime_http_client.py  test_multimodal_extraction.py  test_picture_dedupe.py  test_reference_extractor.py  test_service_boundaries.py  test_vision_messages.py
temporial_graph/: .dockerignore  .env.example  .env.sample  Dockerfile.compose  README.md  llm_config.yaml  pyproject.toml
temporial_graph/.cursor/rules/: temporial-graph-project.mdc
temporial_graph/docs/: DESIGN.md  DEVELOPER_ENHANCEMENTS.md  MULTI_PROJECT_OPERATING_SPEC.md  OPENAPI.md  README.md
temporial_graph/docs/input_docs/: CANONOCAL_EVENTS.md  IMPLEMENTATION_PLAN.md  PRODUCT_ENHANCEMENT.md
temporial_graph/docs/notebooks/: temporial_graph_rag_bridge.ipynb
temporial_graph/ontologies/: company_events.v1.json
temporial_graph/schemas/: ontology.schema.json
temporial_graph/src/temporial_graph_rag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
temporial_graph/tests/: test_api_ingest.py  test_collection_naming.py  test_collection_registry.py  test_event_supersession_extract.py  test_isolation.py  test_llm_config_yaml.py  test_neo4j_isolation_integration.py  test_ontology_decay_retrieval.py  test_ontology_schema.py  test_ontology_snapshot_supersession.py  test_phase_e_api.py  test_predicates.py  test_publish_time.py  test_retrieval_json_extract.py  test_scoring.py  test_vector_similarity.py
temporial_graph_openai/: .env.example  Dockerfile.compose  README.md  financial_entity_schema.md  llm_config.yml  llm_service_openapi.json  pyproject.toml
temporial_graph_openai/.cursor/rules/: project-stack.mdc  temporal-graph-python.mdc
temporial_graph_openai/docs/: DEVELOPER.md  ONTOLOGIES.md  README.md
temporial_graph_openai/ontologies/: company_data.json
temporial_graph_openai/predicates/: default.yml  groups.yml
temporial_graph_openai/references/: doc_processing_openapi.json
temporial_graph_openai/scripts/: export_openapi.py
temporial_graph_openai/temporal_graph/: __init__.py  predicates.py  settings.py
temporial_graph_openai/temporal_graph/api/: collection_routes.py  ingest_routes.py  main.py  retrieve_routes.py
temporial_graph_openai/temporal_graph/doc_processing/: __init__.py  client.py  types.py
temporial_graph_openai/temporal_graph/jobs/: __init__.py  manager.py
temporial_graph_openai/temporal_graph/llm/: __init__.py  router.py
temporial_graph_openai/temporal_graph/middleware/: collection_wire.py
temporial_graph_openai/temporal_graph/models/: __init__.py  api.py  financial.py  pipeline.py
temporial_graph_openai/temporal_graph/neo4j/: __init__.py  bootstrap.py  driver.py  repository.py  schema.py
temporial_graph_openai/temporal_graph/ontology/: __init__.py  cli.py  loader.py  ontology.schema.json  subtype.py
temporial_graph_openai/temporal_graph/pipeline/: __init__.py  entity_enrichment.py  entity_kinds.py  entity_resolution.py  extraction.py  invalidation.py  llm_schemas.py
temporial_graph_openai/tests/: test_collection_wire.py  test_ontology_schema.py  test_slug.py
temporial_graph_traversal/: .env.example  Dockerfile.compose  README.md  ins.txt  llm_config.yaml  pyproject.toml
temporial_graph_traversal/docs/: backtesting_protocol.md  phase1_implementation_comprehensive.md  phase2_implementation_comprehensive.md  phase3_implementation_comprehensive.md  phase4_implementation_comprehensive.md  phase5_implementation_comprehensive.md  phase6_implementation_comprehensive.md  phase9_implementation_comprehensive.md  project_openapi.json  raqe_phase_to_file_mapping.md  rc_validation_plan.md
temporial_graph_traversal/raqe/: collection_namespace.py  config.py  main.py
temporial_graph_traversal/raqe/api/: errors.py  (+3 more)
temporial_graph_traversal/scripts/: rc_check.py
unified_api/: .dockerignore  .env.example  Dockerfile.compose  pyproject.toml
unified_api/scripts/: export_openapi.py
unified_api/tests/: test_openapi_contract.py  test_phase2_inprocess.py
unified_api/unified_api/: lifespan.py  main.py  settings.py
(+848 files in other folders)
