[project]
name = "core-rag-graph"
version = "0.1.0"
description = "Graph-enhanced RAG FastAPI server (arXiv 2603.25152v1)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "gunicorn==23.0.0",
  "python-multipart>=0.0.9",
  "websockets==12.0",
  "networkx==3.4.2",
  "tiktoken==0.9.0",
  "json-repair==0.46.2",
  "requests==2.32.5",
  "PyYAML>=6.0.2",
  "pydantic>=2.10.0",
  "nanoid==2.0.0",
  "python-dotenv>=1.0.1",
  "graspologic==3.4.4",
  "pandas>=2.0.0",
  "openai>=1.0.0",
  "neo4j>=6.1.0",
]

[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
  "graph",
  "routers",
  "utils",
  "config",
  "graph_server.py",
  "state.py",
  "schemas.py",
  "graph_logic.py",
  "logging_config.py",
]

[tool.uv]
dev-dependencies = [
  "ruff>=0.6.0",
  "basedpyright>=1.20.0",
  # Starlette 0.27 (via FastAPI 0.104) TestClient passes app= to httpx.Client; httpx 0.28 removed it.
  "httpx>=0.24.0,<0.28",
]

