[project]
name = "temporial-graph-rag"
version = "0.1.0"
description = "Temporal graph RAG service for event-driven financial ingestion."
readme = "IMPLEMENTATION_PLAN.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "neo4j>=6.1.0",
  "pydantic>=2.8.0",
  "pytest>=8.0.0",
  "python-dotenv>=1.0.1",
  "uvicorn>=0.30.0",
  "jsonschema>=4.22.0",
  "pyyaml>=6.0.1",
]

[project.optional-dependencies]
redis = ["redis>=5.0.0"]
dev = ["jupyterlab>=4.2.0"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
