[project]
name = "unified-api"
version = "0.1.0"
description = "All FastAPI services merged into a single process."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "starlette>=0.40.0",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.1.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "httpx>=0.28.0",
    "requests>=2.32.5",
    "litellm>=1.82.4",
    "openai>=1.59.0",
    "neo4j>=6.1.0",
    "asyncpg>=0.29.0",
    "lightrag-hku",
    "huggingface_hub",
    "mineru[core]",
    "tqdm",
    "docling[vlm,easyocr,xbrl]>=2.80.0",
    "unstructured[all-docs]",
    "ixbrl-parse",
    "markitdown[all]",
    "lxml>=5",
    "pymupdf>=1.24",
    "mistletoe>=1.3",
    "pandas>=2.0.0",
    "Pillow>=10.0.0",
    "ImageHash>=4.3.2",
    "scikit-learn>=1.5",
    "networkx==3.4.2",
    "graspologic==3.4.4",
    "tiktoken>=0.9.0",
    "json-repair==0.46.2",
    "nanoid==2.0.0",
    "websockets>=12.0",
    "redis[hiredis]>=5.2.0",
    "tenacity>=9.0.0",
    "rapidfuzz>=3.11.0",
    "jsonschema>=4.23.0",
    "gunicorn==23.0.0",
    "llm-service",
    "doc-processing",
    "core-rag-graph",
    "ra-literag",
    "temporial-graph-rag",
    "temporal-graph-openai",
    "reference-aware-query-engine",
]

[project.scripts]
unified-api = "unified_api.main:run"

[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["unified_api"]

[tool.uv.sources]
llm-service = { path = "../llm-service" }
doc-processing = { path = "../doc_processing" }
core-rag-graph = { path = "../core_rag_graph" }
ra-literag = { path = "../ra_literag" }
temporial-graph-rag = { path = "../temporial_graph" }
temporal-graph-openai = { path = "../temporial_graph_openai" }
reference-aware-query-engine = { path = "../temporial_graph_traversal" }

[tool.uv]
override-dependencies = [
    "numpy>=2.0.0,<=2.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
